version/0.19/_sources/api/solver/_autosummary/settings/contact_resistance_regions.rst.txt
:orphan:

.. _contact_resistance_regions:

contact_resistance_regions
==========================

.. autoclass:: ansys.fluent.core.solver.settings_241.contact_resistance_regions.contact_resistance_regions
    :show-inheritance:

.. rubric:: Methods

========================================   =======================================

Method                                                                     Summary

========================================   =======================================
:ref:`list_properties <list_properties>`       List properties of selected object.

:ref:`add_zone <add_zone>`                                     'add_zone' command.

:ref:`list_zone <list_zone>`                                  'list_zone' command.

:ref:`delete_zone <delete_zone>`                            'delete_zone' command.

========================================   =======================================

.. rubric:: Named object type

:ref:`contact_resis_child <contact_resis_child>`


.. rubric:: Included in:

======================================   ===========================

Parent                                                       Summary

======================================   ===========================
:ref:`electric_field <electric_field>`       'electric_field' child.

======================================   ===========================

